Fix langauge selector text overlap, and fix days until delete math

--- a/static-src/css/styles.css
+++ b/static-src/css/styles.css
@@ -90,7 +90,7 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    padding: 0 5px;
+    padding: 0 20px 0 5px;
     margin-top: 6px;
     border: none;
     background-color: transparent;
